Valides sauf index

--- a/generateur-pseudo.htm
+++ b/generateur-pseudo.htm
@@ -1,6 +1,7 @@
 <!doctype html>
-<html>
+<html lang="fr">
     <head>
+		<!-- validé -->
         <title>Générateur de nom</title>
         <meta charset="utf-8">
         <link rel="stylesheet" type="text/css" href="css/animaux.css"/>
@@ -14,7 +15,7 @@
 		<button onclick="generer()">Nom aléatoire</button>
 		<input id='resultat' type="text" size="50" placeholder='Prénom personalisé' readonly/>
 		
-		<p><a class="ancre_menu" href="#menu"><img id="ancre" src="ancre.png"/></a></p>			
+		<p><a class="ancre_menu" href="#menu"><img id="ancre" src="ancre.png" alt="ancre"/></a></p>			
 		<script src="js/jquery-3.3.1.min.js"></script>
 		<script src="js/menu.js"></script>
 		<script src="js/ancre.js"></script>
