--- a/herisson.htm
+++ b/herisson.htm
@@ -1,6 +1,7 @@
 <!doctype html>
-<html>
+<html lang="fr">
     <head>
+		<!-- valide-->
         <title>Kiwi</title>
         <meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="css/animaux.css"/>
@@ -23,7 +24,7 @@
 				<h3>Kiwi</h3>
 				<table>
 					<tr>
-						<td colspan="2"><img src="exotique/herisson.jpg" class="chat"/></td>
+						<td colspan="2"><img src="exotique/herisson.jpg" class="chat" alt="herisson"/></td>
 						<td>
 							<p>
 							Kiwi adore faire du sport sur sa roue, il peut rester toute la nuit a courire de dans.
@@ -45,7 +46,7 @@
 							</ul>
 						</td>
 						<td colspan="2">
-							<img src="exotique/herisson2.jpg" class="chat"/>
+							<img src="exotique/herisson2.jpg" class="chat" alt="herisson2"/>
 						</td>
 					</tr>
 					<tr>
@@ -87,7 +88,7 @@
             <p>&copy; 2018 Inside Corporation</p>
         </footer>
 		
-		<p><a class="ancre_menu" href="#titre"><img id="ancre" src="ancre.png"/></a></p>
+		<p><a class="ancre_menu" href="#titre"><img id="ancre" src="ancre.png" alt="ancre"/></a></p>
 		
 		<script src="js/jquery-3.3.1.min.js"></script>
 		<script src="js/menu.js"></script>
