--- a/index.htm
+++ b/index.htm
@@ -1,6 +1,6 @@
 <!doctype html>
 
-<html>
+<html lang="fr">
     <head>
         <title>index</title>
         <meta charset="utf-8">
@@ -28,7 +28,7 @@
 							<p>
 							Notre association vous permet d'adopter l'animal de vos rêves très facilement et rapidement. Mais il y a toujours certaines conditions aux quels vous devez adhérer pour pouvoir le faire...
 							</p>
-							<p id="bouton"><a href="adopter.htm">Continuer</a></p>
+							<p class="bouton"><a href="adopter.htm">Continuer</a></p>
 						</td>
 					</tr>
                 </table>
@@ -40,7 +40,7 @@
 							<p>
 							On a recuillit toutes les informations et les recommendations d'après les psycologues d'animaux les plus renommés...
 							</p>
-							<p id="bouton"><a href="chat-heureux.htm">Continuer</a></p>
+							<p class="bouton"><a href="chat-heureux.htm">Continuer</a></p>
 						</td>
 					</tr>
                 </table>
@@ -50,10 +50,10 @@
 						<td>
 							<h2> Sleepy le chaton</h2>
 							<p>
-							<img src="chats/sleepy.jpg" id="imganimal"/>
+							<img src="chats/sleepy.jpg" id="imganimal" alt="sleepy"/>
 							Sleepy viens d'arriver chez nous il y a une semaine, et il a déjà beacoup de fans...
 							</p>
-							<p id="bouton"><a href="chatsleepy.htm">Continuer</a></p>
+							<p class="bouton"><a href="chatsleepy.htm">Continuer</a></p>
 						</td>
 					</tr>
                 </table>
@@ -65,7 +65,7 @@
 							<p>
 							L'hérisson comme animal de compagnie peut paraître étrange mais de plus en plus de gens décident d'adopter cette superbe animal. Voici comment s'en occuper...
 							</p>
-							<p id="bouton"><a href="soccuper-herisson.htm">Continuer</a></p>
+							<p class="bouton"><a href="soccuper-herisson.htm">Continuer</a></p>
 						</td>
 					</tr>
                 </table>
@@ -77,7 +77,7 @@
 							<p>
 							Beaucoup de personnes sont intéressés par les reptiles et plus spécifiquement les serpent comme animal de compagie, mais est-ce que ça peut être l'animal parfait pour vous?...
 							</p>
-							<p id="bouton"><a href="adopter-serpent.htm">Continuer</a></p>
+							<p class="bouton"><a href="adopter-serpent.htm">Continuer</a></p>
 						</td>
 					</tr>
                 </table>
@@ -117,7 +117,7 @@
             <p>&copy; 2018 Inside Corporation</p>
         </footer>
 		
-		<p><a class="ancre_menu" href="#titre"><img id="ancre" src="ancre.png"/></a></p>
+		<p><a class="ancre_menu" href="#titre"><img id="ancre" src="ancre.png" alt="ancre"/></a></p>
 			
 		<script src="js/jquery-3.3.1.min.js"></script>
 		<script src="js/menu.js"></script>
