--- a/index.htm
+++ b/index.htm
@@ -32,7 +32,7 @@
 				<article>
 					<h2> Sleepy le chaton</h2>
 					<p>
-						<img src="chats/sleepy.jpg" id="imganimal" alt="sleepy" /> Sleepy viens d'arriver chez nous il y a une semaine, et il a déjà beacoup de fans...
+						<img src="chats/sleepy.jpg" alt="sleepy" /> Sleepy viens d'arriver chez nous il y a une semaine, et il a déjà beacoup de fans...
 					</p>
 					<p class="bouton"><a href="chatsleepy.htm">Continuer</a></p>
 				</article>
