--- a/qui-sommes-nous.htm
+++ b/qui-sommes-nous.htm
@@ -1,6 +1,7 @@
 <!doctype HTML>
-<html>
+<html lang="fr">
     <head>
+		<!-- valide -->
         <title>Nos animaux</title>
         <meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="css/animaux.css"/>
@@ -34,21 +35,19 @@
 		<nav id="menu"></nav>
 		
 		
-		<p>
-			<blockquote cite="http://www.nasa.com">
-				Le meilleur site depuis Facebook.<br />
-				<cite>- La NASA</cite>
-			</blockquote>
-			
-			
-			<blockquote cite="http://www.donald-trump.com" class="trump">
-				Oh mon dieu! Et la le mec il me parle de www.animaux.com, c'était vraiment un truc incroyable.<br />
-				<cite>- Donald Trump</cite>
-			</blockquote>
-		</p>
+		<blockquote cite="http://www.nasa.com">
+			Le meilleur site depuis Facebook.<br />
+			<cite>- La NASA</cite>
+		</blockquote>
 		
 		
-		<p><a class="ancre_menu" href="#menu"><img id="ancre" src="ancre.png"/></a></p>			
+		<blockquote cite="http://www.donald-trump.com" class="trump">
+			Oh mon dieu! Et la le mec il me parle de www.animaux.com, c'était vraiment un truc incroyable.<br />
+			<cite>- Donald Trump</cite>
+		</blockquote>
+		
+		
+		<p><a class="ancre_menu" href="#menu"><img id="ancre" src="ancre.png" alt="ancre"/></a></p>			
 		<script src="js/jquery-3.3.1.min.js"></script>
 		<script src="js/menu.js"></script>
 		<script src="js/ancre.js"></script>
