--- a/snake.htm
+++ b/snake.htm
@@ -1,6 +1,7 @@
 <!doctype html>
-<html>
+<html lang="fr">
     <head>
+		<!-- valide -->
         <title>Python</title>
         <meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="css/animaux.css"/>
@@ -23,7 +24,7 @@
 				<h3>Python</h3>
 				<table>
 					<tr>
-						<td colspan="2"><img src="exotique/snake.jpg" class="chat"/></td>
+						<td colspan="2"><img src="exotique/snake.jpg" class="chat" alt="snake"/></td>
 						<td>
 							<p>
 							Python est un serpent très spécial qui vient du brésil. Son trait le plus remarquable est sa peau iridescente ! et c'est beaucoup plus impressionnant dans la vrai vie.
@@ -45,7 +46,7 @@
 							</ul>
 						</td>
 						<td colspan="2">
-							<img src="exotique/snake2.jpg" class="chat"/>
+							<img src="exotique/snake2.jpg" class="chat" alt="snake2"/>
 						</td>
 					</tr>
 					<tr>
@@ -87,7 +88,7 @@
             <p>&copy; 2018 Inside Corporation</p>
         </footer>
 		
-		<p><a class="ancre_menu" href="#titre"><img id="ancre" src="ancre.png"/></a></p>
+		<p><a class="ancre_menu" href="#titre"><img id="ancre" src="ancre.png" alt="ancre"/></a></p>
 		
 		<script src="js/jquery-3.3.1.min.js"></script>
 		<script src="js/menu.js"></script>
