--- a/chien.htm
+++ b/chien.htm
@@ -8,69 +8,29 @@
         <link rel="stylesheet" type="text/css" href="css/menu.css"/>
     </head>
     <body>
-		<h1 id="titre">Animals</h1>
-		<nav id="menu"></nav>
-		<br>
+		<header>
+			<h1>Animals</h1>
+			<nav></nav>
+		</header>
 		
-		<div id="contenu">
-			<div>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus et convallis felis. Duis interdum turpis non risus rutrum dignissim. Integer venenatis lorem id dui dapibus, vitae finibus nibh condimentum. Morbi at ante egestas, vehicula neque sed, suscipit turpis. Cras dapibus tempus rutrum. Etiam scelerisque vulputate sem sit amet fringilla. Fusce tristique ultrices mauris, et consectetur leo vulputate vitae. Morbi eget ante fermentum, tincidunt augue vitae, mattis erat. Aliquam sit amet quam vel tortor sollicitudin tempus. Suspendisse pharetra mattis odio, non sagittis eros rutrum eget. Fusce neque ex, dapibus at leo et, volutpat malesuada quam. Integer quis cursus purus. Integer purus leo, dictum nec neque quis, rutrum pellentesque urna. Sed porttitor odio nec vulputate porttitor. Quisque in orci sed sapien porta venenatis.
-                </p>
-            </div>
+		<section id="animaux">
+			<h3>Belle</h3>
+			<a href="chien1.htm"><img src="chiens/1.jpg" class="animal" alt="1"/></a>
 			
-			<div>
-				<h3>Belle</h3>
-				<a href="chien1.htm"><img src="chiens/1.jpg" class="animaux" alt="1"/></a>
-				<br>
-				
-				<h3>Moon</h3>
-				<a href="chien2.htm"><img src="chiens/2.jpg" class="animaux" alt="2"/></a>
-				<br>
-				
-				<h3>Suki</h3>
-				<a href="chien3.htm"><img src="chiens/3.jpg" class="animaux" alt="3"/></a>
-				<br>
-			</div>
+			<h3>Moon</h3>
+			<a href="chien2.htm"><img src="chiens/2.jpg" class="animal" alt="2"/></a>
 			
-			<div id="actus">
-                <ul>
-                    <li>Brand new song for everybody</li>
-                    <li>Cheese for every one ?!</li>
-                    <li>Les jeux tuent plus que le cancer du poumon</li>
-                    <li>ioqjoiqjiojqoijoiqj qdvfdsvfs</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>cracracra dojksofjvfovbjz fiejv o</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                </ul>
-            </div>
-		</div>
+			<h3>Suki</h3>
+			<a href="chien3.htm"><img src="chiens/3.jpg" class="animal" alt="3"/></a>
+		</section>
 		
 		<footer>
-            <p>&copy; 2018 Inside Corporation</p>
-        </footer>
-		
-		<p><a class="ancre_menu" href="#titre"><img id="ancre" src="ancre.png" alt="ancre"/></a></p>
+			<p>&copy; 2018 Inside Corporation</p>
+			<a class='ancre_menu' href='#'><img src="ancre.png" alt="ancre" /></a>
+		</footer>
 		
 		<script src="js/jquery-3.3.1.min.js"></script>
 		<script src="js/menu.js"></script>
 		<script src="js/ancre.js"></script>
-		<script>
-			$('#contenu').css('height', $('#contenu div:nth-child(2)').css('height'));
-		</script>
     </body>
 </html>
