--- a/menu.htm
+++ b/menu.htm
@@ -8,15 +8,8 @@
 		</ul>
 	</li>
 	<li><a href="questionnaire.htm">Quiz</a></li>
-	<li><a href="generateur-pseudo.htm">Generateur Pseudo</a></li>
-	<li>FAQ
-		<ul>
-			<li><a href="qui-sommes-nous.htm">Qui sommes nous</a></li>
-			<li>Adopter un animal</li>
-			<li>Nous confier un animal</li>
-			<li>Mentions légales</li>
-		</ul>
-	</li>
+	<li><a href="generateur-pseudo.htm">Générateur Pseudo</a></li>
+	<li><a href="faq.htm">FAQ</a></li>
 	<li>Contact
 		<ul>
 			<li>Twitter</li>
@@ -27,6 +20,5 @@
 			<li>Adresse mail</li>
 		</ul>
 	</li>
-	<li><a href="generateur-pseudo.htm">Générateur</a>
 	</li>
 </ul>
