--- a/tarantule.htm
+++ b/tarantule.htm
@@ -14,11 +14,11 @@
 		<br>
 		
 		<div id="contenu">
-			<div>
+			<!-- <div>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus et convallis felis. Duis interdum turpis non risus rutrum dignissim. Integer venenatis lorem id dui dapibus, vitae finibus nibh condimentum. Morbi at ante egestas, vehicula neque sed, suscipit turpis. Cras dapibus tempus rutrum. Etiam scelerisque vulputate sem sit amet fringilla. Fusce tristique ultrices mauris, et consectetur leo vulputate vitae. Morbi eget ante fermentum, tincidunt augue vitae, mattis erat. Aliquam sit amet quam vel tortor sollicitudin tempus. Suspendisse pharetra mattis odio, non sagittis eros rutrum eget. Fusce neque ex, dapibus at leo et, volutpat malesuada quam. Integer quis cursus purus. Integer purus leo, dictum nec neque quis, rutrum pellentesque urna. Sed porttitor odio nec vulputate porttitor. Quisque in orci sed sapien porta venenatis.
                 </p>
-            </div>
+            </div> -->
 			
 			<div>
 				<h3>Mimi</h3>
@@ -57,7 +57,7 @@
 				</table>
 			</div>
 			
-			<div id="actus">
+			<!-- <div id="actus">
                 <ul>
                     <li>Brand new song for everybody</li>
                     <li>Cheese for every one ?!</li>
@@ -81,15 +81,14 @@
                     <li>Loremp loremp loremp loremp loremp</li>
                     <li>Loremp loremp loremp loremp loremp</li>
                 </ul>
-            </div>
+            </div> -->
 		</div>
 		
 		<footer>
             <p>&copy; 2018 Inside Corporation</p>
+			<a class='ancre_menu' href='#'><img src="ancre.png" alt="ancre" /></a>
         </footer>
-		
-		<p><a class="ancre_menu" href="#titre"><img id="ancre" src="ancre.png" alt="ancre"/></a></p>
-		
+				
 		<script src="js/jquery-3.3.1.min.js"></script>
 		<script src="js/menu.js"></script>
 		<script src="js/ancre.js"></script>
