ouvrir les liens dans une nouvelle page pour fb/twitter, etc

--- a/menu.htm
+++ b/menu.htm
@@ -12,10 +12,10 @@
 	<li><a href="faq.htm">FAQ</a></li>
 	<li>Contact
 		<ul>
-			<li><a href="https://twitter.com/AnimalUrc">Twitter</a></li>
-			<li><a href="https://www.facebook.com/UrcAnimal-529849047410395/?modal=admin_todo_tour">Facebook</a></li>
-			<li><a href="https://plus.google.com/u/1/communities/105157718769201656948">Google+</a></li>
-			<li><a href="https://www.instagram.com/urcanimal/">Instagram</a></li>
+			<li><a href="https://twitter.com/AnimalUrc" target="_blank">Twitter</a></li>
+			<li><a href="https://www.facebook.com/UrcAnimal-529849047410395/?modal=admin_todo_tour" target="_blank">Facebook</a></li>
+			<li><a href="https://plus.google.com/u/1/communities/105157718769201656948" target="_blank">Google+</a></li>
+			<li><a href="https://www.instagram.com/urcanimal/" target="_blank">Instagram</a></li>
 			<li>Adresse mail</li>
 		</ul>
 	</li>
