ajout adresse mail

--- a/menu.htm
+++ b/menu.htm
@@ -16,7 +16,7 @@
 			<li><a href="https://www.facebook.com/UrcAnimal-529849047410395/?modal=admin_todo_tour" target="_blank">Facebook</a></li>
 			<li><a href="https://plus.google.com/u/1/communities/105157718769201656948" target="_blank">Google+</a></li>
 			<li><a href="https://www.instagram.com/urcanimal/" target="_blank">Instagram</a></li>
-			<li>Adresse mail</li>
+			<li><a href='mailto:urcanimal@gmail.com'>Adresse mail</a></li>
 		</ul>
 	</li>
 	</li>
