Juste le mail j'ai rien mis, j'ai créer les comptes sinon

--- a/menu.htm
+++ b/menu.htm
@@ -12,11 +12,10 @@
 	<li><a href="faq.htm">FAQ</a></li>
 	<li>Contact
 		<ul>
-			<li>Twitter</li>
-			<li><a href="https://www.facebook.com/HelpForAnimalsInDistress/?hc_ref=ARQyMQI-vsk9Ec3GZlFxMIVR2q_SDx6ibX_UphVtFHksWk_uznXxTHoMEGlinbSTHYg">Facebook</a></li>
-			<li>Google+</li>
-			<li>Instagram</li>
-			<li>Snapchat</li>
+			<li><a href="https://twitter.com/AnimalUrc">Twitter</a></li>
+			<li><a href="https://www.facebook.com/UrcAnimal-529849047410395/?modal=admin_todo_tour">Facebook</a></li>
+			<li><a href="https://plus.google.com/u/1/communities/105157718769201656948">Google+</a></li>
+			<li><a href="https://www.instagram.com/urcanimal/">Instagram</a></li>
 			<li>Adresse mail</li>
 		</ul>
 	</li>
